--- a/package.json
+++ b/package.json
@@ -1,57 +1,61 @@
 {
-  "name": "mongo-scheduler",
-  "description": "persistent event scheduler using mongo as storage",
-  "version": "1.1.9-beta.003",
-  "keywords": [
-    "job",
-    "jobs",
-    "scheduler",
-    "schedule",
-    "event",
-    "mongo",
-    "cron"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/jamplify/mongo-scheduler"
-  },
-  "dependencies": {
-    "cron-parser": "1.1.0",
-    "eventemitter2": "^2.1.3",
-    "lodash": "3.9.1",
-    "mongodb": "2.0.34",
-    "underscore": "~1.5.2"
-  },
-  "devDependencies": {
-    "mocha": "~1.13.0",
-    "moment": "2.10.3",
-    "should": "7.0.1",
-    "sinon": "~1.8.1"
-  },
-  "scripts": {
-    "test": "mocha -u bdd -R spec --recursive -c ./test/"
-  },
-  "license": "MIT",
-  "engine": {
-    "node": ">= 0.6"
-  },
-  "author": {
-    "name": "JP Erkelens",
-    "email": "jp@jamplify.com"
-  },
-  "contributors": [
-    {
-      "name": "Matt Roman",
-      "email": "matt@jamplify.com"
+    "name": "mongo-scheduler",
+    "description": "persistent event scheduler using mongo as storage",
+    "version": "1.1.9-beta.004",
+    "keywords": [
+	"job",
+	"jobs",
+	"scheduler",
+	"schedule",
+	"event",
+	"mongo",
+	"cron"
+    ],
+    "repository": {
+	"type": "git",
+	"url": "git@github.com:AnomalistDesignLLC/mongo-scheduler.git"
+    },
+    "dependencies": {
+	"cron-parser": "1.1.0",
+	"eventemitter2": "^2.1.3",
+	"lodash": "3.9.1",
+	"mongodb": "2.0.34",
+	"underscore": "~1.5.2"
+    },
+    "devDependencies": {
+	"mocha": "~1.13.0",
+	"moment": "2.10.3",
+	"should": "7.0.1",
+	"sinon": "~1.8.1"
+    },
+    "scripts": {
+	"test": "mocha -u bdd -R spec --recursive -c ./test/"
+    },
+    "license": "MIT",
+    "engine": {
+	"node": ">= 0.6"
+    },
+    "author": {
+	"name": "JP Erkelens",
+	"email": "jp@jamplify.com"
+    },
+    "contributors": [
+	{
+	    "name": "Matt Roman",
+	    "email": "matt@jamplify.com"
+	},
+	{
+	    "name":"Matthew Aaron Raymer",
+	    "email":"matthew.raymer@anomalistdesign.com"
+	}
+    ],
+    "jshintConfig": {
+	"eqeqeq": true,
+	"indent": 2,
+	"esnext": true,
+	"asi": true,
+	"maxlen": 80,
+	"singleGroups": true,
+	"unused": true
     }
-  ],
-  "jshintConfig": {
-    "eqeqeq": true,
-    "indent": 2,
-    "esnext": true,
-    "asi": true,
-    "maxlen": 80,
-    "singleGroups": true,
-    "unused": true
-  }
 }
